CSS Flexbox photo gallery is completed.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,24 @@
 
 </header>
 <div class="gallery">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" 
+    alt="Sleeping cat's face in the bed">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg"
+    alt="Blue-eyed cat lying on the floor upside down with paws outstretched to the ears"> 
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" 
+    alt="Portrait of a cat with green eyes seriously looking sideways and down">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" 
+    alt="Sleeping cat on the bed covered with a blanket, only a cute muzzle is visible">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" 
+    alt="Little white kitten with blue eyes">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" 
+    alt="Two little kittens are watching something with interest">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" 
+    alt="Kitten with light gray hair and black stripes on the forehead peeking out from under the bedspread">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" 
+    alt="Red tabby kitten with gray eyes and pink nose">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" 
+    alt="Two small kittens black and light with bright turquoise eyes lying on top of each other">
     
 </div>
 </body>
